{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 216,
  "lineage": "79181ccf-3139-2c01-9e73-3d9050393e63",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "VPC_Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:138545512063:vpc/vpc-49c21531",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-a1a48bd9",
            "default_route_table_id": "rtb-7219a809",
            "default_security_group_id": "sg-db6390af",
            "dhcp_options_id": "dopt-c5d01cbd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-49c21531",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-7219a809",
            "owner_id": "138545512063",
            "tags": {
              "Name": "Test_Joneshys_VPC_Test"
            },
            "tags_all": {
              "Name": "Test_Joneshys_VPC_Test"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Elastic_IP_Instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08a016848bb114ec2",
            "domain": "vpc",
            "id": "eipalloc-021a1d2ec68bbae05",
            "instance": "i-0738652c7e8d17929",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ba1660b63dcd0ba2",
            "private_dns": "ip-172-31-49-30.us-west-2.compute.internal",
            "private_ip": "172.31.49.30",
            "public_dns": "ec2-44-236-0-36.us-west-2.compute.amazonaws.com",
            "public_ip": "44.236.0.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Test_Joneshys_test_EIP"
            },
            "tags_all": {
              "Name": "Test_Joneshys_test_EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_vpc.VPC_Test",
            "aws_instance.web",
            "aws_key_pair.Test_And_Test",
            "aws_security_group.HTTP_Anyware",
            "aws_security_group.SSH_Anyware"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0528a5175983e7f28",
            "arn": "arn:aws:ec2:us-west-2:138545512063:instance/i-0738652c7e8d17929",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0738652c7e8d17929",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Test_Joneshys_Terraform_Key_Pair_Test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba1660b63dcd0ba2",
            "private_dns": "ip-172-31-49-30.us-west-2.compute.internal",
            "private_ip": "172.31.49.30",
            "public_dns": "ec2-44-234-40-74.us-west-2.compute.amazonaws.com",
            "public_ip": "44.234.40.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051676fb5f3db6a29",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Test_Joneshys_HTTP_Anyware",
              "Test_Joneshys_SSH_Anyware"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9863b4b3",
            "tags": {
              "Name": "Test_Joneshys_Instances_Test"
            },
            "tags_all": {
              "Name": "Test_Joneshys_Instances_Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-043ab8cc16149ccc4",
              "sg-07fec94c799adfa73"
            ]
          },
          "dependencies": [
            "aws_default_vpc.VPC_Test",
            "aws_key_pair.Test_And_Test",
            "aws_security_group.HTTP_Anyware",
            "aws_security_group.SSH_Anyware"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HTTP_Anyware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:138545512063:security-group/sg-043ab8cc16149ccc4",
            "description": "HTTP for Anyware ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043ab8cc16149ccc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Test_Joneshys_HTTP_Anyware",
            "name_prefix": "",
            "owner_id": "138545512063",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-49c21531"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SSH_Anyware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:138545512063:security-group/sg-07fec94c799adfa73",
            "description": "SSH_Anyware inbound to SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fec94c799adfa73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Test_Joneshys_SSH_Anyware",
            "name_prefix": "",
            "owner_id": "138545512063",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-49c21531"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.VPC_Test"
          ]
        }
      ]
    }
  ]
}